// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`frag_depth override (Material.depth) > color + depth: FragmentOutput struct carries @location(0) color AND @builtin(frag_depth) 1`] = `
{
  "builtins": [],
  "code": "// Vertex Shader
struct VertexInput {
    @location(0) position: vec3f,
}

struct VertexOutput {
    @builtin(position) position: vec4f,
    @location(0) vZ: f32,
}

@vertex
fn vs_main(input: VertexInput) -> VertexOutput {
    var output: VertexOutput;
    output.position = vec4f(input.position, 1.0);
    output.vZ = input.position.z;
    return output;
}

// Fragment Shader
struct FragmentInput {
    @location(0) vZ: f32,
}

struct FragmentOutput {
    @location(0) color: vec4f,
    @builtin(frag_depth) frag_depth: f32,
}

@fragment
fn fs_main(input: FragmentInput) -> FragmentOutput {
    var output: FragmentOutput;
    output.color = vec4f(vec3f(0.4, 0.7, 1.0), 1.0);
    output.frag_depth = 0.25 + input.vZ * 0.5;
    return output;
}",
  "fragmentEntryPoint": "fs_main",
  "varyings": [
    {
      "location": 0,
      "name": "vZ",
      "type": "f32",
    },
  ],
  "vertexEntryPoint": "vs_main",
}
`;

exports[`frag_depth override (Material.depth) > depth-only: fragment stage still runs and writes frag_depth, no color output 1`] = `
{
  "builtins": [],
  "code": "// Vertex Shader
struct VertexInput {
    @location(0) position: vec3f,
}

struct VertexOutput {
    @builtin(position) position: vec4f,
}

@vertex
fn vs_main(input: VertexInput) -> VertexOutput {
    var output: VertexOutput;
    output.position = vec4f(input.position, 1.0);
    return output;
}

// Fragment Shader
struct FragmentOutput {
    @builtin(frag_depth) frag_depth: f32,
}

@fragment
fn fs_main() -> FragmentOutput {
    var output: FragmentOutput;
    output.frag_depth = 0.75;
    return output;
}",
  "fragmentEntryPoint": "fs_main",
  "varyings": [],
  "vertexEntryPoint": "vs_main",
}
`;

exports[`golden WGSL — MRT integer targets > FragmentOutput field type comes from the member node, not a hardcoded vec4f 1`] = `
{
  "builtins": [],
  "code": "// Vertex Shader
struct VertexInput {
    @location(0) position: vec3f,
}

struct VertexOutput {
    @builtin(position) position: vec4f,
}

@vertex
fn vs_main(input: VertexInput) -> VertexOutput {
    var output: VertexOutput;
    output.position = vec4f(input.position, 1.0);
    return output;
}

// Fragment Shader
struct FragmentOutput {
    @location(0) color: vec4f,
    @location(1) ids: vec4u,
}

@fragment
fn fs_main() -> FragmentOutput {
    var output: FragmentOutput;
    output.color = vec4f(1.0, 0.0, 0.0, 1.0);
    output.ids = vec4u(7u, 0u, 0u, 1u);
    return output;
}",
  "fragmentEntryPoint": "fs_main",
  "varyings": [],
  "vertexEntryPoint": "vs_main",
}
`;

exports[`golden WGSL — compute path > atomic histogram: storage atomics + index + Var + If 1`] = `
{
  "builtins": [
    "global_invocation_id",
  ],
  "code": "// Bindings (uniforms, storage, textures, samplers)
@group(0) @binding(0) var<storage, read_write> storage0: array<atomic<u32>>;
@group(0) @binding(1) var<storage, read_write> storage1: array<u32>;

// Compute Shader
@compute @workgroup_size(64, 1, 1)
fn cs_main(
    @builtin(global_invocation_id) global_id: vec3u
) {
    let _mod = global_id.x % 64u;
    let _atomicAdd = atomicAdd(&storage0[_mod], 1u);
    var slot = _atomicAdd;
    storage1[_mod * 16u + slot] = global_id.x;
}",
  "storage": [
    {
      "access": "read_write",
      "binding": 0,
      "group": 0,
      "name": "storage0",
      "type": "array<atomic<u32>>",
    },
    {
      "access": "read_write",
      "binding": 1,
      "group": 0,
      "name": "storage1",
      "type": "array<u32>",
    },
  ],
  "workgroupSize": [
    64,
    1,
    1,
  ],
}
`;

exports[`golden WGSL — compute path > control flow + struct + let/const: Loop / Break / Continue 1`] = `
{
  "builtins": [
    "global_invocation_id",
  ],
  "code": "// Bindings (uniforms, storage, textures, samplers)
struct Particle {
    pos: vec3f,
    life: f32,
}

@group(0) @binding(0) var<storage, read_write> storage0: array<Particle>;

// Compute Shader
@compute @workgroup_size(64, 1, 1)
fn cs_main(
    @builtin(global_invocation_id) global_id: vec3u
) {
    var acc = 0.0;
    for (var i: i32 = 0i; i < 4i; i++) {
        if (storage0[global_id.x].life < 0.0) {
            continue;
        }
        if (i > 2i) {
            break;
        }
        acc = acc + storage0[global_id.x].life;
    }
    let scaled = acc * 0.5;
    storage0[global_id.x].life = scaled;
}",
  "storage": [
    {
      "access": "read_write",
      "binding": 0,
      "group": 0,
      "name": "storage0",
      "type": "array<Particle>",
    },
  ],
  "workgroupSize": [
    64,
    1,
    1,
  ],
}
`;

exports[`golden WGSL — compute path > workgroup atomic + barriers 1`] = `
{
  "builtins": [
    "local_invocation_id",
  ],
  "code": "// Bindings (uniforms, storage, textures, samplers)
@group(0) @binding(0) var<storage, read_write> storage0: array<u32>;

// Module-scope variables
var<workgroup> wgCount: atomic<u32>;

// Compute Shader
@compute @workgroup_size(64, 1, 1)
fn cs_main(
    @builtin(local_invocation_id) local_id: vec3u
) {
    if (local_id.x == 0u) {
        atomicStore(&wgCount, 0u);
    }
    workgroupBarrier();
    let _atomicAdd = atomicAdd(&wgCount, 1u);
    var slot = _atomicAdd;
    workgroupBarrier();
    var total = atomicLoad(&wgCount);
    storage0[slot] = total;
}",
  "storage": [
    {
      "access": "read_write",
      "binding": 0,
      "group": 0,
      "name": "storage0",
      "type": "array<u32>",
    },
  ],
  "workgroupSize": [
    64,
    1,
    1,
  ],
}
`;

exports[`golden WGSL — render path > conditional + inline wgsl in fragment 1`] = `
{
  "builtins": [
    "position",
  ],
  "code": "// Bindings (uniforms, storage, textures, samplers)
struct Uniforms_render {
    @align(8) @size(8) screenSize: vec2f,
}
@group(0) @binding(0) var<uniform> uniforms_render: Uniforms_render;

// Vertex Shader
struct VertexInput {
    @location(0) position: vec3f,
}

struct VertexOutput {
    @builtin(position) position: vec4f,
}

@vertex
fn vs_main(input: VertexInput) -> VertexOutput {
    var output: VertexOutput;
    output.position = vec4f(input.position, 1.0);
    return output;
}

// Fragment Shader
struct FragmentInput {
    @builtin(position) position: vec4f,
}

@fragment
fn fs_main(input: FragmentInput) -> @location(0) vec4f {
    let _sel = select(vec3f(0.1, 0.1, 0.1), vec3f(0.9, 0.2, 0.2), (input.position.xy / uniforms_render.screenSize).x > 0.5);
    return vec4f(_sel * (dot(_sel, vec3f(0.299, 0.587, 0.114))), 1.0);
}",
  "fragmentEntryPoint": "fs_main",
  "varyings": [],
  "vertexEntryPoint": "vs_main",
}
`;

exports[`golden WGSL — render path > lit mesh: attributes, camera/model uniforms, varying, vec math 1`] = `
{
  "builtins": [],
  "code": "// Bindings (uniforms, storage, textures, samplers)
struct Uniforms_render {
    @align(16) @size(64) cameraProjectionMatrix: mat4x4f,
    @align(16) @size(64) cameraViewMatrix: mat4x4f,
}
@group(0) @binding(0) var<uniform> uniforms_render: Uniforms_render;

struct Uniforms_object {
    @align(16) @size(64) modelWorldMatrix: mat4x4f,
    @align(16) @size(48) modelNormalMatrix: mat3x3f,
}
@group(1) @binding(0) var<uniform> uniforms_object: Uniforms_object;

// Vertex Shader
struct VertexInput {
    @location(0) normal: vec3f,
    @location(1) position: vec3f,
}

struct VertexOutput {
    @builtin(position) position: vec4f,
    @location(0) vNormal: vec3f,
}

@vertex
fn vs_main(input: VertexInput) -> VertexOutput {
    var output: VertexOutput;
    output.position = uniforms_render.cameraProjectionMatrix * (uniforms_render.cameraViewMatrix * (uniforms_object.modelWorldMatrix * vec4f(input.position, 1.0)));
    output.vNormal = normalize(uniforms_object.modelNormalMatrix * input.normal);
    return output;
}

// Fragment Shader
struct FragmentInput {
    @location(0) vNormal: vec3f,
}

@fragment
fn fs_main(input: FragmentInput) -> @location(0) vec4f {
    return vec4f(vec3f(0.4, 0.7, 1.0) * (0.15 + max(dot(input.vNormal, normalize(vec3f(0.6, 1.0, 0.8))), 0.0)), 1.0);
}",
  "fragmentEntryPoint": "fs_main",
  "varyings": [
    {
      "location": 0,
      "name": "vNormal",
      "type": "vec3f",
    },
  ],
  "vertexEntryPoint": "vs_main",
}
`;

exports[`golden WGSL — render path > textured: sampled texture binding + sampler + textureSample 1`] = `
{
  "builtins": [
    "position",
  ],
  "code": "// Bindings (uniforms, storage, textures, samplers)
struct Uniforms_render {
    @align(8) @size(8) screenSize: vec2f,
}
@group(0) @binding(0) var<uniform> uniforms_render: Uniforms_render;

@group(1) @binding(0) var t0: texture_2d<f32>;
@group(1) @binding(1) var linearSampler: sampler;

// Vertex Shader
struct VertexInput {
    @location(0) position: vec3f,
}

struct VertexOutput {
    @builtin(position) position: vec4f,
}

@vertex
fn vs_main(input: VertexInput) -> VertexOutput {
    var output: VertexOutput;
    output.position = vec4f(input.position, 1.0);
    return output;
}

// Fragment Shader
struct FragmentInput {
    @builtin(position) position: vec4f,
}

@fragment
fn fs_main(input: FragmentInput) -> @location(0) vec4f {
    return textureSample(t0, linearSampler, input.position.xy / uniforms_render.screenSize);
}",
  "fragmentEntryPoint": "fs_main",
  "varyings": [],
  "vertexEntryPoint": "vs_main",
}
`;
